[package]
name = "mini-lust-chap4"
version = "0.1.0"
authors = ["ihciah <ihciah@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bytes = "1.0"
byteorder = "1.4"
num_enum = "0.5"

tokio-util = { version = "0.6", features = ["codec"] }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["macros", "rt"] }
futures-util = { version = "0.3", features = ["default", "sink"] }
